--- a/tests/https_test/CMakeLists.txt
+++ b/tests/https_test/CMakeLists.txt
@@ -2,11 +2,8 @@
 cmake_minimum_required(VERSION 3.21)
 project(https_test)
 
-# Add the parent directory to find glaze
-list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../..")
-
 # Only build if OpenSSL is available
-find_package(OpenSSL QUIET)
+find_package(OpenSSL REQUIRED)
 
 FetchContent_Declare(
     asio
@@ -16,33 +13,35 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(asio)
 
-if(OpenSSL_FOUND)
-    # Test if we can actually compile with OpenSSL headers
-    include(CheckCXXSourceCompiles)
-    set(CMAKE_REQUIRED_LIBRARIES OpenSSL::SSL OpenSSL::Crypto)
-    check_cxx_source_compiles("
-        #include <openssl/ssl.h>
-        #include <openssl/opensslconf.h>
-        int main() { return 0; }
-    " OPENSSL_HEADERS_AVAILABLE)
-    
-    if(OPENSSL_HEADERS_AVAILABLE)
-        add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
-        target_link_libraries(${PROJECT_NAME}
-            PRIVATE
-            glaze::glaze
-            OpenSSL::SSL
-            OpenSSL::Crypto
-        )
-        target_compile_definitions(${PROJECT_NAME} PRIVATE GLZ_ENABLE_SSL)
-        target_include_directories(${PROJECT_NAME} PRIVATE include ${asio_SOURCE_DIR}/asio/include)
+# Test if we can actually compile with OpenSSL headers
+include(CheckCXXSourceCompiles)
+set(CMAKE_REQUIRED_LIBRARIES OpenSSL::SSL OpenSSL::Crypto)
+check_cxx_source_compiles("
+    #include <openssl/ssl.h>
+    #include <openssl/opensslconf.h>
+    #include <openssl/evp.h>
+    #include <openssl/x509.h>
+    #include <openssl/pem.h>
+    int main() { return 0; }
+" OPENSSL_HEADERS_AVAILABLE)
 
-        # Set C++ standard
-        target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
-        message(STATUS "HTTPS test will be built with OpenSSL support")
-    else()
-        message(STATUS "OpenSSL found but headers missing - install libssl-dev/openssl-devel")
-    endif()
+if(OPENSSL_HEADERS_AVAILABLE)
+    add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
+    target_link_libraries(${PROJECT_NAME}
+        PRIVATE
+        glz_test_exceptions
+        OpenSSL::SSL
+        OpenSSL::Crypto
+    )
+    target_compile_definitions(${PROJECT_NAME} PRIVATE GLZ_ENABLE_SSL)
+    target_include_directories(${PROJECT_NAME} PRIVATE include ${asio_SOURCE_DIR}/asio/include)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
+
+    # Set C++ standard
+    target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
+    
+    message(STATUS "Self-contained HTTPS test will be built with OpenSSL support")
+    message(STATUS " Certificates will be generated automatically at runtime")
 else()
-    message(STATUS "OpenSSL not found - HTTPS test will be skipped")
+    message(FATAL_ERROR "❌ OpenSSL headers missing - install libssl-dev/openssl-devel")
 endif()
