--- a/tests/json_test/CMakeLists.txt
+++ b/tests/json_test/CMakeLists.txt
@@ -28,6 +28,14 @@ endif ()
 
 add_test(NAME ${PROJECT_NAME}_non_null COMMAND ${PROJECT_NAME}_non_null)
 
+## glz::json_t test
+
+add_executable(json_t_test json_t_test.cpp)
+
+target_link_libraries(json_t_test PRIVATE glz_test_common)
+
+add_test(NAME json_t_test COMMAND json_t_test)
+
 ## JSON Schema test
 
 add_executable(jsonschema_test jsonschema_test.cpp)
@@ -35,6 +43,4 @@ add_executable(jsonschema_test jsonschema_test.cpp)
 target_link_libraries(jsonschema_test PRIVATE glz_test_common)
 
 add_test(NAME jsonschema_test COMMAND jsonschema_test)
-
-target_code_coverage(jsonschema_test AUTO ALL)
 
