--- a/tests/websocket_test/CMakeLists.txt
+++ b/tests/websocket_test/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(repe_test)
+project(websocket_server)
 
 FetchContent_Declare(
     asio
@@ -13,6 +13,5 @@ add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 target_include_directories(${PROJECT_NAME} PRIVATE include ${asio_SOURCE_DIR}/asio/include)
 target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_exceptions)
 
-add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
-
-target_code_coverage(${PROJECT_NAME} AUTO ALL)
+target_compile_definitions(${PROJECT_NAME} PRIVATE 
+    SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
