--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -95,6 +95,15 @@ nav:
      - Partial Write: partial-write.md
    - Max Float Precision: max-float-precision.md
    - Ranges: ranges.md
+ - Networking:
+   - networking/http-rest-support.md
+   - networking/http-server.md
+   - networking/http-router.md
+   - networking/rest-registry.md
+   - networking/tls-support.md
+   - networking/http-client.md
+   - networking/advanced-networking.md
+   - networking/http-examples.md
  - Interface Utilities:
    - JSON Include: json-include.md
    - CLI Menu: cli-menu.md
