--- a/tests/networking_tests/http_server_api_tests/CMakeLists.txt
+++ b/tests/networking_tests/http_server_api_tests/CMakeLists.txt
@@ -4,3 +4,5 @@ add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 
 target_include_directories(${PROJECT_NAME} PRIVATE include ${asio_SOURCE_DIR}/asio/include)
 target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_exceptions)
+
+target_code_coverage(${PROJECT_NAME} AUTO ALL)
