HTTP/REST documentation, examples, and code improvements (#1798)
* Default http response .json is a json_t

* Organize networking tests and add documentation

* Update gcc-x86.yml

* More tests and fixes

* Update http_server_api_tests.cpp

* Update http_router.hpp

* More testing

* Update http_router.hpp

* testing rather than code coverage

* Update http-client.md

* Update http_server.hpp

* Update websocket_connection.hpp

* capture by move

* Remove ostringstream

* asynchronous http_client

* Update http_client.hpp

* Update http-client.md

* Update http_client.hpp

* Update http_server.hpp

--- a/tests/networking_tests/rest_test/CMakeLists.txt
+++ b/tests/networking_tests/rest_test/CMakeLists.txt
@@ -13,6 +13,8 @@ add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 target_include_directories(${PROJECT_NAME} PRIVATE include ${asio_SOURCE_DIR}/asio/include)
 target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_exceptions)
 
+add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
+
 add_executable(rest_registry_test rest_registry_test.cpp)
 
 target_include_directories(rest_registry_test PRIVATE include ${asio_SOURCE_DIR}/asio/include)
