--- a/tests/networking_tests/http_server_api_tests/CMakeLists.txt
+++ b/tests/networking_tests/http_server_api_tests/CMakeLists.txt
@@ -1,11 +1,8 @@
-project(threading_test)
+project(http_server_api_tests)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 
+target_include_directories(${PROJECT_NAME} PRIVATE include ${asio_SOURCE_DIR}/asio/include)
 target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_exceptions)
-
-if (MINGW)
-    target_compile_options(${PROJECT_NAME} PRIVATE "-Wa,-mbig-obj")
-endif ()
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
