ci: use clang-19 in quickfuzz job

--- a/.github/workflows/quickfuzz.yml
+++ b/.github/workflows/quickfuzz.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        clang: [18]
+        clang: [19]
         build_type: [Debug]
         std: [23]
 
@@ -37,7 +37,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libc++-dev libc++abi-dev
+        sudo apt-get install -y clang-19
 
     - name: Configure CMake
       run: |
@@ -46,7 +46,6 @@ jobs:
           -DCMAKE_CXX_STANDARD=${{matrix.std}} \
           -DCMAKE_C_COMPILER=${{env.CC}} \
           -DCMAKE_CXX_COMPILER=${{env.CXX}} \
-          -DCMAKE_CXX_FLAGS="-stdlib=libc++" \
           -DBUILD_TESTING=Off
 
     - name: Build
