--- a/.github/workflows/clang-tidy.yml
+++ b/.github/workflows/clang-tidy.yml
@@ -25,10 +25,10 @@ jobs:
     - name: Run Clang-Tidy Include Cleaner
       run: |
         echo "Running clang-tidy on .hpp files"
-        git diff --diff-filter=d --name-only origin/main | grep -E "\.hpp$" | xargs -r -t -n 1 -P 8 -- clang-tidy-19 --fix --checks="-*,misc-include-cleaner"
+        git diff --diff-filter=d --name-only origin/main | grep -E "\.hpp$" | xargs -r -t -n 1 -P 8 -- /usr/bin/clang-tidy-19 --fix --checks="-*,misc-include-cleaner" || true
 
         echo "Running clang-tidy on .cpp files"
-        git diff --diff-filter=d --name-only origin/main | grep -E "\.cpp$" | xargs -r -t -n 1 -P 8 -- clang-tidy-19 --fix --checks="-*,misc-include-cleaner"
+        git diff --diff-filter=d --name-only origin/main | grep -E "\.cpp$" | xargs -r -t -n 1 -P 8 -- /usr/bin/clang-tidy-19 --fix --checks="-*,misc-include-cleaner" || true
 
     - name: Commit changes
       uses: EndBug/add-and-commit@v9
