--- a/tests/networking_tests/rest_test/CMakeLists.txt
+++ b/tests/networking_tests/rest_test/CMakeLists.txt
@@ -4,7 +4,7 @@ project(rest_test)
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_exceptions asio)
+target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_exceptions glz_asio)
 
 add_executable(rest_registry_test rest_registry_test.cpp)
 
