--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -67,6 +67,7 @@ add_subdirectory(inplace_vector)
 add_subdirectory(int_parsing)
 add_subdirectory(jmespath)
 add_subdirectory(jsonrpc_test)
+add_subdirectory(key_transformers_test)
 add_subdirectory(lib_test)
 add_subdirectory(mock_json_test)
 add_subdirectory(reflection)
