--- a/tests/interop/CMakeLists.txt
+++ b/tests/interop/CMakeLists.txt
@@ -41,3 +41,14 @@ add_executable(${PROJECT_NAME} test_c_ffi.c)
 set_target_properties(${PROJECT_NAME} PROPERTIES C_STANDARD 11)
 target_link_libraries(${PROJECT_NAME} PRIVATE glaze_interop)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
+
+# Comprehensive optional types test
+project(interop_optional_test)
+add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
+target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
+target_link_libraries(${PROJECT_NAME} PRIVATE glaze_interop glaze_interop_client glaze::glaze ut::ut)
+# Set compile options directly without inheriting from glz_test_common
+if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    target_compile_options(${PROJECT_NAME} PRIVATE -fno-exceptions -fno-rtti -Wall -Wextra -pedantic -Wno-missing-braces)
+endif()
+add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
