--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -109,6 +109,7 @@ nav:
    - JSON Include: json-include.md
    - CLI Menu: cli-menu.md
    - Glaze Interfaces: glaze-interfaces.md
+   - FFI Shared Library (Interop): interop.md
  - Data Recording/Logging:
    - Time Trace Profiles: time-trace.md
    - Data Recorder: recorder.md
