Update Dockerfile to use official devcontainer image
The prior image was using a generic Ubuntu image.  This change switches to using an official MSFT/GitHub image that is better set up for codespaces.  As a side effect, we no longer need to specify a custom user (which fixes a failing security check with newer git releases) and builds in all the needed security pieces for debugging.

Tested:
cmake --preset clang-debug
cmake --build --preset clang-debug -j $(nproc)
ctest --preset clang-debug

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,6 @@
 # [Choice] bionic (18.04), focal (20.04), jammy (22.04), noble (24.04)
 ARG VARIANT="noble"
-FROM ubuntu:${VARIANT}
+FROM mcr.microsoft.com/devcontainers/cpp:${VARIANT}
 
 # Restate the variant to use it later on in the llvm and cmake installations
 ARG VARIANT
