Use smallest object when encountering ambiguous variants

--- a/tests/json_test/CMakeLists.txt
+++ b/tests/json_test/CMakeLists.txt
@@ -44,3 +44,11 @@ target_link_libraries(jsonschema_test PRIVATE glz_test_common)
 
 add_test(NAME jsonschema_test COMMAND jsonschema_test)
 
+## Variant ambiguous test - test for ambiguous variant handling
+
+add_executable(variant_ambiguous_test variant_ambiguous_test.cpp)
+
+target_link_libraries(variant_ambiguous_test PRIVATE glz_test_common)
+
+add_test(NAME variant_ambiguous_test COMMAND variant_ambiguous_test)
+
