remove bitflags (future feature)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,7 @@ nav:
    - Skip Keys: skip-keys.md
    - Generic JSON: generic-json.md
  - Reflection:
+   - Reflection Overview: reflection.md
    - Pure Reflection: pure-reflection.md
  - Formats:
    - JSON: json.md
