--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -55,43 +55,43 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     target_compile_options(glz_test_exceptions INTERFACE /W4 /wd4459 /wd4805)
 endif()
 
-# add_subdirectory(api_test)
-# add_subdirectory(beve_test)
-# add_subdirectory(cli_menu_test)
-# add_subdirectory(compare_test)
-# add_subdirectory(csv_test)
-# add_subdirectory(eigen_test)
-# add_subdirectory(example_json)
-# add_subdirectory(exceptions_test)
-# add_subdirectory(inplace_vector)
-# add_subdirectory(int_parsing)
-# add_subdirectory(jmespath)
-# add_subdirectory(jsonrpc_test)
-# add_subdirectory(key_transformers_test)
-# add_subdirectory(lib_test)
-# add_subdirectory(mock_json_test)
-# add_subdirectory(reflection)
-# add_subdirectory(roundtrip)
+add_subdirectory(api_test)
+add_subdirectory(beve_test)
+add_subdirectory(cli_menu_test)
+add_subdirectory(compare_test)
+add_subdirectory(csv_test)
+add_subdirectory(eigen_test)
+add_subdirectory(example_json)
+add_subdirectory(exceptions_test)
+add_subdirectory(inplace_vector)
+add_subdirectory(int_parsing)
+add_subdirectory(jmespath)
+add_subdirectory(jsonrpc_test)
+add_subdirectory(key_transformers_test)
+add_subdirectory(lib_test)
+add_subdirectory(mock_json_test)
+add_subdirectory(reflection)
+add_subdirectory(roundtrip)
 add_subdirectory(stencil)
-# add_subdirectory(threading_test)
-# add_subdirectory(toml_test)
-# add_subdirectory(utility_formats)
+add_subdirectory(threading_test)
+add_subdirectory(toml_test)
+add_subdirectory(utility_formats)
 
 # JSON Tests
-# add_subdirectory(json_conformance)
-# add_subdirectory(json_performance)
-# add_subdirectory(json_reflection_test)
-# add_subdirectory(json_test)
+add_subdirectory(json_conformance)
+add_subdirectory(json_performance)
+add_subdirectory(json_reflection_test)
+add_subdirectory(json_test)
 
-# add_subdirectory(networking_tests)
+add_subdirectory(networking_tests)
 
-# if(glaze_EETF_FORMAT)
-#     add_subdirectory(eetf_test)
-# endif(glaze_EETF_FORMAT)
+if(glaze_EETF_FORMAT)
+    add_subdirectory(eetf_test)
+endif(glaze_EETF_FORMAT)
 
-# if(glaze_BUILD_INTEROP)
-#     add_subdirectory(interop)
-# endif(glaze_BUILD_INTEROP)
+if(glaze_BUILD_INTEROP)
+    add_subdirectory(interop)
+endif(glaze_BUILD_INTEROP)
 
 # We don't run find_package_test or glaze-install_test with MSVC/Windows, because the Github action runner often chokes
 # Don't run find_package on Clang, because Linux runs with Clang try to use GCC standard library and have errors before Clang 18
