--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,6 +100,7 @@ nav:
    - networking/http-rest-support.md
    - networking/http-server.md
    - networking/http-router.md
+   - networking/cors.md
    - networking/rest-registry.md
    - networking/tls-support.md
    - networking/http-client.md
