--- a/tests/networking_tests/CMakeLists.txt
+++ b/tests/networking_tests/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(http_examples)
 
 # Networking Tests
 add_subdirectory(asio_repe)
+add_subdirectory(cors_preflight_test)
 add_subdirectory(http_router_test)
 add_subdirectory(http_client_test)
 add_subdirectory(http_server_api_tests)
