--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        gcc: [12, 13, 14]
+        gcc: [12, 13, 14, 15]
         build_type: [Debug]
         std: [23]
 
@@ -33,6 +33,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Install GCC ${{ matrix.gcc }}
+      if: ${{ matrix.gcc == 15 }}
+      run: |
+        sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+        sudo apt-get update
+        sudo apt-get install -y gcc-15 g++-15
 
     - name: Configure CMake
       run: |
