--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -73,6 +73,9 @@ jobs:
           python3
         update-ca-certificates
 
+    - name: Prepare build directory
+      run: mkdir -p ${{ github.workspace }}/build
+
     - uses: actions/checkout@v4
 
     - name: Configure CMake
