--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -36,13 +36,13 @@ jobs:
 
     - name: Configure CMake
       run: |
-        CXXFLAGS="-g3" cmake -S ${{github.workspace}} -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_CXX_STANDARD=${{matrix.std}}
+        CXXFLAGS="-g3" cmake -S "$GITHUB_WORKSPACE" -B "$GITHUB_WORKSPACE/build" -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_CXX_STANDARD=${{matrix.std}}
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/build -j $(nproc)
+      run: cmake --build "$GITHUB_WORKSPACE/build" -j $(nproc)
 
     - name: Test
-      run: ctest --output-on-failure --test-dir ${{github.workspace}}/build
+      run: ctest --output-on-failure --test-dir "$GITHUB_WORKSPACE/build"
 
   build-gcc15:
     runs-on: ubuntu-24.04
@@ -76,14 +76,14 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Prepare build directory
-      run: cmake -E make_directory ${{ github.workspace }}/build
+      run: cmake -E make_directory "$GITHUB_WORKSPACE/build"
 
     - name: Configure CMake
       run: |
-        CXXFLAGS="-g3" cmake -S ${{github.workspace}} -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_CXX_STANDARD=${{matrix.std}}
+        CXXFLAGS="-g3" cmake -S "$GITHUB_WORKSPACE" -B "$GITHUB_WORKSPACE/build" -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DCMAKE_CXX_STANDARD=${{matrix.std}}
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/build -j $(nproc)
+      run: cmake --build "$GITHUB_WORKSPACE/build" -j $(nproc)
 
     - name: Test
-      run: ctest --output-on-failure --test-dir ${{github.workspace}}/build
+      run: ctest --output-on-failure --test-dir "$GITHUB_WORKSPACE/build"
