skip_if meta utility

--- a/tests/json_test/CMakeLists.txt
+++ b/tests/json_test/CMakeLists.txt
@@ -52,3 +52,11 @@ target_link_libraries(variant_ambiguous_test PRIVATE glz_test_common)
 
 add_test(NAME variant_ambiguous_test COMMAND variant_ambiguous_test)
 
+## Value-based skip test - test for issue #1994
+
+add_executable(value_based_skip_test value_based_skip_test.cpp)
+
+target_link_libraries(value_based_skip_test PRIVATE glz_test_common)
+
+add_test(NAME value_based_skip_test COMMAND value_based_skip_test)
+
