Support for requires_key with JSON reading

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,6 +93,7 @@ nav:
    - JSON Pointer Syntax: json-pointer-syntax.md
    - JMESPath: JMESPath.md
    - JSON Schema: json-schema.md
+   - Field Validation: field-validation.md
    - Partial Read/Write:
      - Partial Read: partial-read.md
      - Partial Write: partial-write.md
