Add WebSocket client support
Implemented a WebSocket client in 'include/glaze/net/websocket_client.hpp'.
Modified 'websocket_connection.hpp' to support client-side masking and initial data injection.
Updated 'http_client.hpp' to recognize 'ws' and 'wss' schemes.
Added 'websocket_client_test.cpp' verification test.

--- a/tests/networking_tests/websocket_test/CMakeLists.txt
+++ b/tests/networking_tests/websocket_test/CMakeLists.txt
@@ -15,3 +15,12 @@ add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_exceptions)
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
+
+# WebSocket client test
+project(websocket_client_test)
+
+add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_exceptions)
+
+add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
